@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.appxi</groupId>
     <artifactId>appxi-javafx</artifactId>
-    <version>21.10.24</version>
+    <version>21.10.29</version>
     <parent>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx</artifactId>
@@ -109,10 +109,9 @@
                 <version>3.8.1</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>--add-exports</arg>
-                        <arg>javafx.web/com.sun.webkit=appxi.javafx</arg>
-                        <arg>--add-exports</arg>
-                        <arg>javafx.web/com.sun.webkit.event=appxi.javafx</arg>
+                        <arg>--add-exports=javafx.web/com.sun.webkit=appxi.javafx</arg>
+                        <arg>--add-exports=javafx.web/com.sun.webkit.event=appxi.javafx</arg>
+                        <arg>--add-opens=javafx.web/javafx.scene.web=appxi.javafx</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
